--- a/snapcast-server/Dockerfile
+++ b/snapcast-server/Dockerfile
@@ -8,6 +8,7 @@ RUN apk add snapcast-server
 WORKDIR /usr/src
 COPY snapserver.conf /etc/snapserver.conf
 COPY start.sh /usr/src/
+ADD page /usr/src/page
 RUN chmod +x /usr/src/start.sh
 
 CMD [ "/bin/bash", "/usr/src/start.sh" ]
